CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(wq)

# Version of library will be divided into 3 parts. Names describe them enough.
set(WQ_MAJOR_VERSION 0)
set(WQ_MINOR_VERSION 0)
set(WQ_MAINTENANCE_VERSION 0)

# We will set the default build mode - of course to Release mode.
if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release CACHE STRING
		"Choose the mode of your build, options are: None Debug Release RelWithDebInfo MinSizeRel."
		FORCE)
endif(NOT CMAKE_BUILD_TYPE)

# Now we are setting libraries type - shared or static.
if(NOT BUILD_SHARED_LIBS)
	set(BUILD_SHARED_LIBS true CACHE BOOL
		"Choose what kind of libraries do you want to build: true means shared (default) and false means static."
		FORCE)
endif(NOT BUILD_SHARED_LIBS)

# Variable which contains suffix which will be added to all built libraries.
set(WQ_OUTPUT_LIBS_PATH "${PROJECT_BINARY_DIR}/lib/")

# Variable which contains path where will all libraries reside after build.
set(WQ_OUTPUT_LIBS_SUFFIX "")
if(${CMAKE_BUILD_TYPE} EQUAL "Debug" OR ${CMAKE_BUILD_TYPE} EQUAL "RelWithDebInfo")
	set(WQ_OUTPUT_LIBS_SUFFIX "d")
endif(${CMAKE_BUILD_TYPE} EQUAL "Debug" OR ${CMAKE_BUILD_TYPE} EQUAL "RelWithDebInfo")

# Variable which contains names and paths of all libraries built by cmake.
# This variable should be changed by all CMakeLists.txt files that build library.
set(WQ_BUILT_LIBS "")

# Generating of config file for wq framework.
configure_file("${PROJECT_SOURCE_DIR}/include/wq/config.h.in" "${PROJECT_BINARY_DIR}/include/wq/config.h")

# Here we are setting directories where our headers will reside. We will also have
# some autogenerated headers so we add 2. path (it also allows out-of-source build).
include_directories("${PROJECT_SOURCE_DIR}/include/" "${PROJECT_BINARY_DIR}/include/")

# Now we are adding subdirectory, where are our sources located.
add_subdirectory(src/)

# At the end setting installing commands would be great idea :).
if(UNIX)
	# libraries
	install(TARGETS ${WQ_BUILT_LIBS} LIBRARY DESTINATION lib)
	# headers
	install(DIRECTORY include/ DESTINATION include FILES_MATCHING PATTERN "*.h")
	# and config header
	install(FILES "${PROJECT_BINARY_DIR}/include/wq/config.h" DESTINATION "include/wq")
else(NOT UNIX)
	# TODO: Windows destination dirs will be more complex.
endif(UNIX)

