
# We will have one library for each subdirectory in this folder - one
# subdirectory for each nested namespace of ::wq namespace.
# Hint: variable WQ_OUTPUT_LIBS_PATH contains the path of directory were libs should be placed.

# First directory is for ::wq namespace and for first wqCore library.
add_subdirectory(core/)

